@@ -456,7 +456,7 @@ class GeneWebWriter:
     
     def get_ref_name(self,person):
         surname = self.rem_spaces( person.get_primary_name().get_surname())
-        firstname = "Living"
+        firstname = _("Living")
         if not (Utils.probably_alive(person,self.db) and self.restrict and self.living):
             firstname = self.rem_spaces( person.get_primary_name().get_first_name())
         if not self.person_ids.has_key(person.get_handle()):
@@ -466,7 +466,7 @@ class GeneWebWriter:
 
     def get_child_ref_name(self,person,father_lastname):
         surname = self.rem_spaces( person.get_primary_name().get_surname())
-        firstname = "Living"
+        firstname = _("Living")
         if not (Utils.probably_alive(person,self.db) and self.restrict and self.living):
             firstname = self.rem_spaces( person.get_primary_name().get_first_name())
         if not self.person_ids.has_key(person.get_handle()):
